# juce-webview-testing-poc

./: .gitignore  CMakeLists.txt  Makefile  README.md
plugin/: CMakeLists.txt
plugin/include/BasicAudioPlugin/: PluginProcessor.h
plugin/include/JuceWebViewPlugin/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/ui/public/: index.html
plugin/ui/public/js/: index.js
